force-app/main/default/objects/SpaRequestEligibility__c/SpaRequestEligibility__c.object-meta.xml
<CustomObject>
    <label>SPA Request Eligibility</label>
    <nameField>
        <displayFormat>SRE-{0000}</displayFormat>
        <label>SPA Request Eligibility Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPA Request Eligibilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>