force-app/main/default/objects/SpaRequestEligibility__c/fields/AEIndicator__c.field-meta.xml
<CustomField>
    <fullName>AEIndicator__c</fullName>
    <label>AE Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>