force-app/main/default/objects/SpaRequestEligibility__c/fields/DirectAccount__c.field-meta.xml
<CustomField>
    <fullName>DirectAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPA Request Eligibilities</relationshipLabel>
    <relationshipName>SPA_Request_Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>