force-app/main/default/objects/SpaRequestEligibility__c/fields/EligibilityEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EligibilityEffectiveDate__c</fullName>
    <label>Eligibility Effective Date</label>
    <type>Date</type>
</CustomField>