force-app/main/default/objects/SpaRequestEligibility__c/fields/EligibilityExpireDate__c.field-meta.xml
<CustomField>
    <fullName>EligibilityExpireDate__c</fullName>
    <label>Eligibility Expire Date</label>
    <type>Date</type>
</CustomField>