force-app/main/default/objects/SpaRequestEligibility__c/fields/IndirectAccount__c.field-meta.xml
<CustomField>
    <fullName>IndirectAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indirect Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPA Request Eligibilities (Indirect Account)</relationshipLabel>
    <relationshipName>SPA_Request_Eligibilities1</relationshipName>
    <type>Lookup</type>
</CustomField>