force-app/main/default/objects/SpaRequestEligibility__c/fields/InquiryOnly__c.field-meta.xml
<CustomField>
    <fullName>InquiryOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inquiry Only</label>
    <type>Checkbox</type>
</CustomField>