force-app/main/default/objects/SpaRequestEligibility__c/fields/RevisedSapAgreementNumber__c.field-meta.xml
<CustomField>
    <fullName>RevisedSapAgreementNumber__c</fullName>
    <label>Revised Sap Agreement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>