force-app/main/default/objects/SpaRequestEligibility__c/fields/SPARequest__c.field-meta.xml
<CustomField>
    <fullName>SPARequest__c</fullName>
    <label>SPA Request</label>
    <referenceTo>SPA_Request__c</referenceTo>
    <relationshipLabel>SPA Request Eligibilities</relationshipLabel>
    <relationshipName>SPA_Request_Eligibilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>